# assetwatch-backend

./: .env.example  CODEBASE.md  Notes.text  README.md  pyproject.toml  xstart_cmd.md
Basics/: 7.functions.py  python.notes.md
Basics/01_generators/: 01.yeild.py
Basics/02.comprehensions/: 01.py
Basics/self-practice/: create-server.py
app/: app.py  schemas.py  users.py
app/api/: main.py
app/api/routers/: assets.py  beacon.py  dashboard.py  monitors.py  observability.py  profile.py  users.py  users_list.py
app/api/routers/models/: assets_models.py  dashboard_models.py  monitors_models.py  observability_models.py  posts_models.py  users_list_models.py  users_models.py
app/api/routers/services/: dashboard_services.py  monitor_services.py
app/api/routers/services/beacon/: __init__.py  chat_service.py  context_builder.py  prompts.py  rag_service.py
app/api/routers/services/beacon/knowledge/: assetwatch_docs.md
app/core/: config.py  constants.py  db.py  email_service.py
scripts/: __init__.py  setup_initial_org.py
worker/: __init__.py  engine.py  main.py  scheduler.py
worker/checkers/: __init__.py  base.py  dns.py  http.py  ping.py  port.py
