[project]
name = "assetwatch-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.10.0",
    "dnspython>=2.6.0",
    "fastapi>=0.135.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "httpx>=0.24.0",
    "imagekitio>=5.3.0",
    "logger>=1.4",
    "permit>=2.8.3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sendgrid>=6.11.0",
    "uvicorn[standard]>=0.44.0",
    # Beacon Chatbot dependencies
    "chromadb>=0.4.0",
    "langchain==1.3.2",
    "langchain-google-genai==4.2.3",
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters==1.1.2",
    "openai>=2.44.0",
    "langchain-core>=1.4.8",
]
